# k8s-mcp-server

./: .dockerignore  .gitignore  CONFIG.md  Dockerfile  LICENSE  README.md  README_EN.md  config.py  env.example  main.py  mcp_admin_cli.py  pyproject.toml
.github/workflows/: pylint.yml
data/: clusters.json
data/kubeconfigs/: 内网集群.yaml
docs/: TOOLS.md
k8s/: README.md  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
services/: __init__.py  dynamic_resource_service.py  factory.py  k8s_advanced_service.py  k8s_api_service.py  k8s_constants.py
services/k8s_advanced/: README.md  __init__.py  backup_restore.py  base.py  batch_ops.py  rbac_advanced.py  resource_conversion.py  validation.py
services/k8s_api/: README.md  __init__.py  autoscaling_policy_ops.py  base.py  cluster_ops.py  interactive_ops.py  jobcronjob_ops.py  networking_storage_ops.py  pod_ops.py  rbac_ops.py  resource_builders.py  service_config_ops.py  workload_ops.py
skills/k8s-manage/: SKILL.md
tests/: check_cluster_reachability.py  regression_test.py  test_tools_manual.py
tools/: __init__.py  auth_tools.py  backup_tools.py  batch_tools.py  cluster_tools.py  config_tools.py  diagnostic_tools.py  k8s_tools.py  rbac_tools.py  validation_tools.py
utils/: __init__.py  admin_routes.py  auth_context.py  backup_paths.py  cluster_config.py  context.py  decorators.py  extension_store.py  fastmcp_custom.py  jwt_middleware.py  jwt_service.py  k8s_helpers.py  k8s_parsers.py  lowlevel.py  mcp_server.py  operations_logger.py  param_parsers.py  permission_profiles.py  response.py  revocation_store.py  token_store.py
